# struct_gen_derive

./: Cargo.toml  README.md
src/: lib.rs
